--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "SSJPrajwol.com"
-        minSdkVersion 19
+        applicationId "ssjprajwol.com"
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
